appId: com.devmetrics.app
---
# open app
- runFlow:
    when:
      notVisible:
        id: "login"
    commands:
    - openLink: exp://192.168.0.99:8081

- assertVisible: "DevMetrics"
- tapOn:
    id: "github-username-input"
- eraseText
- inputText: "natanaelvich"
- tapOn: "Search"
- assertVisible: "Wellcome natanaelvich"
- assertVisible: "Natanael"
- assertVisible: "Passionate about technology and lover of challenges"
- tapOn:
    id: "account-details-button"
- assertVisible: "natanaelvich"
- assertVisible: "Natanael"
- assertVisible: "Bio"
- assertVisible: "Passionate about technology and lover of challenges"
- assertVisible: "Blog"
- assertVisible: "https://www.linkedin.com/in/natanaelvich/"
- assertVisible: "https://www.linkedin.com/in/natanaelvich/"
- assertVisible: "Company"
- assertVisible: "COAMO AGROINDUSTRIAL COOPERATIVA"
- assertVisible: "URL"
- assertVisible: "https://github.com/Natanaelvich"
- scrollUntilVisible:
    element: "Location"
    direction: DOWN
- scrollUntilVisible:
    element: "Timbiras,MA,Brazil"
    direction: DOWN

# back
- runFlow:
    when:
      platform: "Android"
    commands:
    - tapOn: "Navigate up"
- runFlow:
    when:
      platform: "IOS"
    commands:
    - tapOn: "Back"

- tapOn:
    text: "Repositories"
- assertVisible: "Search repository..."
- tapOn: "devmetrics_show-case-expo-router"
- assertVisible: "Repository details"
- assertVisible: "devmetrics_show-case-expo-router"
- assertVisible: "DevMetrics is a mobile app built with React Native and Expo, created\
    \ to apply the concepts of navigation using Expo Router and fetching data from\
    \ the GitHub API to display repositories, user details, and metrics."

# back
- runFlow:
    when:
      platform: "Android"
    commands:
    - tapOn: "Navigate up"
- runFlow:
    when:
      platform: "IOS"
    commands:
    - tapOn: "Back"

- tapOn:
    id: "home-tab"
- assertVisible:
    id: "home-container"
- tapOn:
    id: "repo-tab"
- assertVisible: "Repositories of natanaelvich"
- tapOn:
    id: "search-input"
- eraseText
- inputText: "devmetrics_show-case-expo-router"
- assertVisible: "devmetrics_show-case-expo-router"
- hideKeyboard
- tapOn:
    id: "home-tab"
- tapOn: "Metrics"
- assertVisible: "Metrics for natanaelvich"
- assertVisible: "Number of Repositories"
- assertVisible: "Number of Stars"
- assertVisible: "Number of Forks"
